[package]
name = "backend-hyperliquid-candles"
version = "0.1.0"
edition = "2021"
description = "Hyperliquid Candle Data Backend in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[profile.release]
lto = true
codegen-units = 1
